test: 옵션 관련 테스트 추가 및 기존 테스트 수정